# driftpaper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  index.js  landing.js
.github/workflows/: release.yml
docs/plans/: 2026-01-24-luminance-controls-design.md
flux/: flux_wasm.js
flux-desktop/: Cargo.toml
flux-desktop/src/: main.rs
flux-gl/: flux_gl_wasm.js
flux-gl/flux/src/: settings.rs
flux/shader/: endpoint.wgsl  line.wgsl  place_lines.comp.wgsl
flux/src/: flux.rs  settings.rs
flux/src/render/: lines.rs
release/: AppIcon.icns
release/Drift.app/Contents/: Info.plist
release/Drift.app/Contents/MacOS/: DriftWallpaper
release/DriftPaper.app/Contents/: Info.plist
web/: .gitignore  default.nix  package.json  pnpm-lock.yaml  vercel.json  webpack.config.js  webpack.landing.js
web/flux/: flux_wasm.d.ts  flux_wasm.js  flux_wasm_bg.wasm  flux_wasm_bg.wasm.d.ts  package.json
web/flux-gl/: flux_gl_wasm.d.ts  flux_gl_wasm.js  flux_gl_wasm_bg.wasm  flux_gl_wasm_bg.wasm.d.ts  package.json
web/src/: landing.css  landing.html  landing.js
