[package]
name = "flux-desktop"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
env_logger.workspace = true
flux.workspace = true
futures.workspace = true
image.workspace = true
log.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"
